# simplegen

./: .gitignore  README.md  pyproject.toml  test.world
src/simplegen/: example_maps.py  map.py  map_creator.py  shapes.py  simple_maps.py  simplegen.py  utils.py
