[project]
name="simplegen"
version="0.0.1"
requires-python = ">=3.8"
dependencies = [
    "lxml"
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
simplegen = "simplegen.simplegen:main"

# Development
[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E501"]